SJIP-288 fix wrapping tree facets

--- a/src/views/DataExploration/components/TreeFacet/index.module.scss
+++ b/src/views/DataExploration/components/TreeFacet/index.module.scss
@@ -71,3 +71,9 @@
     width: 90% !important;
   }
 }
+
+.treeNodeTitle {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+}
